--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
         <link rel="stylesheet" href="/static/css/base.css">
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar fixed-top navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
                     <img src="/static/img/nav-logo.png" alt="Open Streaming Platform Hub Alpha" width="48"> <span class="mx-2"><b>Hub α</b></span>
@@ -25,6 +26,12 @@
                     <ul id="liveChannelsList" class="d-flex flex-wrap justify-content-md-start justify-content-evenly list">
                     </ul>
                 </div>
+            </div>
+        </div>
+        <div class="nsfwOverlay">
+            <div class="form-check form-switch">
+                <input id="nsfwToggle" class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">NSFW</label>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
