--- a/templates/index.html
+++ b/templates/index.html
@@ -23,13 +23,23 @@
                     </div>
                 </div>
                 <h3>Channels Online Now...</h3>
-                <div id="liveChannels" class="liveChannels boxShadow">
+                <div id="liveChannels" class="liveChannels boxShadow mb-4">
                     <div id="liveChannelsLoader" class="text-center">
                         <div class="spinner-border text-primary" role="status">
                             <span class="visually-hidden">Loading...</span>
                         </div>
                     </div>
                     <ul id="liveChannelsList" class="d-flex flex-wrap justify-content-md-start justify-content-evenly list" style="display:none;">
+                    </ul>
+                </div>
+                <h3>Hub's Communities</h3>
+                <div id="servers" class="liveChannels boxShadow">
+                    <div id="serversLoader" class="text-center">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                    <ul id="serversList" class="d-flex flex-wrap justify-content-md-start justify-content-evenly list" style="display:none;">
                     </ul>
                 </div>
             </div>
