--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                             <span class="visually-hidden">Loading...</span>
                         </div>
                     </div>
-                    <ul id="liveChannelsList" class="d-flex flex-wrap justify-content-md-start justify-content-evenly list" style="display:none;">
+                    <ul id="liveChannelsList" class="d-flex flex-wrap justify-content-center justify-content-evenly list" style="display:none;">
                     </ul>
                 </div>
                 <h3>Hub's Communities</h3>
@@ -40,7 +40,7 @@
                             <span class="visually-hidden">Loading...</span>
                         </div>
                     </div>
-                    <ul id="serversList" class="d-flex flex-wrap justify-content-md-start justify-content-evenly list" style="display:none;">
+                    <ul id="serversList" class="d-flex flex-wrap justify-content-center justify-content-evenly list" style="display:none;">
                     </ul>
                 </div>
             </div>
