--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Open Streaming Platform Hub</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />-->
         <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css">
